# mirx

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: build.sh  qemu-run.sh
src/: main.rs
src/arch/x86/: init.rs  mod.rs
src/arch/x86/gdt/: access_byte.rs  flags_limit.rs  gdt.rs  mod.rs
src/arch/x86/idt/: idt.rs  interrupt.rs  mod.rs  type_attributes.rs
src/arch/x86/kernel/: init.rs
src/arch/x86/mm/: frame.rs
src/utils/: log.rs  mod.rs  vga.rs
